--- a/package.json
+++ b/package.json
@@ -13,9 +13,6 @@
     "@next-auth/prisma-adapter": "^1.0.6",
     "@prisma/client": "^4.14.0",
     "@tailwindcss/forms": "^0.5.3",
-    "@types/node": "20.1.2",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
@@ -36,12 +33,17 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-leaflet": "^4.2.1",
+    "react-select": "^5.7.3",
+    "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/leaflet": "^1.9.3",
+    "@types/node": "20.1.2",
+    "@types/react": "18.2.6",
+    "@types/react-dom": "18.2.4",
     "prettier": "2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.8",
     "prisma": "^4.14.0"
