--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "eslint-config-next": "13.4.1",
     "leaflet": "^1.9.4",
     "leaflet-routing-machine": "^3.2.12",
+    "lodash": "^4.17.21",
     "next": "13.4.1",
     "next-auth": "^4.22.1",
     "next-cloudinary": "^4.11.0",
     "next-superjson-plugin": "^0.5.7",
     "postcss": "8.4.23",
+    "pusher": "^5.1.3",
+    "pusher-js": "^8.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
@@ -37,11 +40,13 @@
     "react-spinners": "^0.13.8",
     "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/leaflet": "^1.9.3",
+    "@types/lodash": "^4.14.195",
     "@types/node": "20.1.2",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
